@@ -7,12 +7,10 @@
 	    <em>Help</em> menu in most applications.</li>
 	    <li>In addition to our extensive written help, the Kubuntu
 	    community in conjunction with the Ubuntu community, provides free
-	    technical support in person and over the Internet. There is also
-	    commercial support available through Canonical, its partners and
-	    approved companies. Learn more at <a
-		href="http://www.ubuntu.com/support">ubuntu.com/support</a>.</li>
+	    technical support in person and over the Internet. Learn more at <a
+		href="http://www.kubuntu.org/support">kubuntu.org/support</a>.</li>
 	    <li>Let us know about your Kubuntu experience at <a
-		href="http://www.ubuntu.com/community">ubuntu.com/community</a>!</li>
+		href="http://www.kubuntu.org/community">kubuntu.org/community</a>!</li>
 	</ul>
     </div>
 </div>
