@@ -1,9 +1,13 @@
 ubiquity-slideshow-ubuntu (59) UNRELEASED; urgency=low
 
+  [ Julien Lavergne ]
   * Lubuntu: Replacing Synaptic by Lubuntu-Software-Center (LP: #958880)
   * Lubuntu: Change the link to the mailing list
 
- -- Julien Lavergne <gilir@ubuntu.com>  Fri, 04 May 2012 18:41:41 +0200
+  [ Harald Sitter ]
+  * Kubuntu: Remove reference to commercial support from Canonical
+
+ -- Harald Sitter <apachelogger@ubuntu.com>  Tue, 19 Jun 2012 18:15:10 +0200
 
 ubiquity-slideshow-ubuntu (58) precise; urgency=low
 
